melengkapi data dummy dan perbaikan posisi tombol

--- a/src/components/card-list/card-list.css
+++ b/src/components/card-list/card-list.css
@@ -81,7 +81,7 @@
 	background-color: #6613ED;
 	position: fixed;
 	bottom: 60px;
-	right: 160px;
+	left: 43%;
 	text-align: center;
 	color: white;
 }
